Basic fix for responsive design on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,9 +5,6 @@
 */
 
 
-/*@import url("/static/css/color-palette.css");*/
-
-
 :root {
   /* Color palette */
   --black: #222831;
@@ -75,6 +72,31 @@ th {
   display: flex;
   padding-top: var(--padding);
   padding-right: var(--padding);
+}
+
+/* Style for screens narrower than 1000px */
+@media screen and (max-width: 1000px) {
+  body {
+    width: 100%;
+    max-height: 100%;
+  }
+
+  .page-container {
+    height: 100%;
+    max-height: 100%;
+    flex-direction: column;
+  }
+
+  footer {
+    height: 10vh;
+    max-height: 100%;
+    flex-direction: row;
+    justify-content: center;
+    justify-content: space-evenly;
+    padding-top: var(--padding);
+    padding-bottom: var(--padding);
+    border-top: var(--line-width-thin) solid var(--light-blue);
+  }
 }
 
 .sidebar {
